# PythonScriptEtrap

./: Camera.py  README.md  Readme-Braço.md  configure.sh  main.py  picameraScript.py
GoogleDrive API UploadFiles/: client_secrets.json  scriptUpload2.py
GoogleDriveUpload/: credentials.json  main.py
PythonEtrap/: Camera.py  DriveUploader.py  LICENSE  __init__.py  __main__.py  client_secrets.json  credentials.json  pyproject.toml  service-key.json  settings.yaml
img/: readme.md
old/: imageCropScript.py  renameScript.py
old/GoogleDriveUpload/: client_secrets.json  credentials.json  service-key.json  settings.yaml  uploadScript.py
