[project]
name = "python_etrap_pkg"
version = "0.0.1"
authors = [
  { name="", email="" },
]
description = "Programa de automação simples para IAs e redes neurais voltado para o uso de modulos de cameras e cropagem de fotos"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/paulopegasif/PythonScriptEtrap"
"Bug Tracker" = "https://github.com/paulopegasif/PythonScriptEtrap/issues"